fix: align items

--- a/src/entities/PageHeader/ui/PageHeader.module.scss
+++ b/src/entities/PageHeader/ui/PageHeader.module.scss
@@ -6,6 +6,7 @@
 
 .breadcrumbs {
   display: inline-flex;
+  align-items: center;
   flex-wrap: wrap;
   gap: 3px;
 }
